--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^2.2.7"
+        "tailwindcss": "^2.2.7",
+        "tailwindcss-plugins": "^0.3.0"
     }
 }
